--- a/templates/toya.html
+++ b/templates/toya.html
@@ -34,13 +34,13 @@
 			</tbody>
 		</table>
 
-		<form>
+		<form action="/" method="POST">
 			<div class="form-group">
 			<h4>Job Name</h4>
-			<input type="text" class="form-control" placeholder="example_node">
+			<input type="text" class="form-control" placeholder="example_node" name="job_name">
 		
 			<h4>exporter list</h4>
-			<textarea class="form-control" rows="10" placeholder="example.com:9100"></textarea>
+			<textarea class="form-control" rows="10" placeholder="example.com:9100" name="exporter_list"></textarea>
 		  	</div>
 		
 			<button type="submit" class="btn btn-default">Add</button>
