--- a/templates/toya.html
+++ b/templates/toya.html
@@ -34,7 +34,7 @@
 			</tbody>
 		</table>
 
-		<form action="/" method="POST">
+		<form action="/create" method="POST">
 			<div class="form-group">
 			<h4>Job Name</h4>
 			<input type="text" class="form-control" placeholder="example_node" name="job_name">
