--- a/templates/toya.html
+++ b/templates/toya.html
@@ -16,30 +16,36 @@
 			</div>
 		</div>
 
+		<a href="{{.PrometheusStatusUrl}}" target="_blank">Prometheus Status URL</a>
 		<h1>Job List</h1>
-		<table class="table">
-			<thead>
-				<th>JobName</th>
-				<th>FileName</th>
-			</thead>
-			<tbody>
-				{{range .}}
-				<tr>
-					<td>{{.JobName}}</td>
-				{{range $fsdcf := .FileSDConfigs}}
-					<td>{{$fsdcf.Names}}</td>
-				{{end}}
-				</tr>
-				{{end}}
-			</tbody>
-		</table>
 
-		<form action="/create" method="POST">
+                <table class="table">
+                        <thead>
+                                <th>JobName</th>
+                                <th>FileName</th>
+                        </thead>
+                        <tbody>
+                                {{range $sc := .ScrapeConfigs}}
+                                <tr>
+                                        <td>{{$sc.JobName}}</td>
+                                {{range $fsdcf := $sc.FileSDConfigs}}
+                                        <td>{{$fsdcf.Names}}</td>
+                                {{end}}
+                                </tr>
+                                {{end}}
+                        </tbody>
+                </table>
+
+		{{if .ErrorMessage}}
+		<pre class="alert alert-danger" id="error-msg">{{.ErrorMessage}}</pre>
+		{{end}}
+
+		<form action="/" method="POST">
 			<div class="form-group">
 			<h4>Job Name</h4>
 			<input type="text" class="form-control" placeholder="example_node" name="job_name">
 		
-			<h4>exporter list</h4>
+			<h4>Exporter list</h4>
 			<textarea class="form-control" rows="10" placeholder="example.com:9100" name="exporter_list"></textarea>
 		  	</div>
 		
