--- a/templates/toya.html
+++ b/templates/toya.html
@@ -21,14 +21,18 @@
 
                 <table class="table">
                         <thead>
+													      <th>Button</th>
                                 <th>Job Name</th>
                                 <th>Exporter list</th>
                         </thead>
                         <tbody>
                                 {{range $JobName, $content := .JobExporterMap}}
                                 <tr>
+																	      <form action="/delete" method="POST">
+																	      <td><button type="submit" name="job_name" value="{{$JobName}}" class="btn btn-primary">delete</button></td>
                                         <td>{{$JobName}}</td>
                                         <td>{{$content}}</td>
+																				</form>
                                 </tr>
                                 {{end}}
                         </tbody>
@@ -38,15 +42,15 @@
 		<pre class="alert alert-danger" id="error-msg">{{.ErrorMessage}}</pre>
 		{{end}}
 
-		<form action="/" method="POST">
+		<form action="/create" method="POST">
 			<div class="form-group">
 			<h4>Job Name</h4>
 			<input type="text" class="form-control" placeholder="example_node" name="job_name">
-		
+
 			<h4>Exporter list</h4>
 			<textarea class="form-control" rows="10" placeholder="example.com:9100" name="exporter_list"></textarea>
 		  	</div>
-		
+
 			<button type="submit" class="btn btn-default">Add</button>
 		</form>
 
